--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
           python3 -m pip install --upgrade pip
           pip3 install requests beautifulsoup4 lxml
       - name: Run
+        run: python3 ./run.py --account ${{ secrets.COOKIE_NAME }} --password${{ secrets.COOKIE_VALUE }}
+    # .
+      - name: Run
         run: python3 ./script.py
 
       - name: Commit
