--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Action Practice
 
 
 on:
+  push:
   schedule:
    - cron: "0 16 * * *"
   
@@ -25,7 +26,7 @@ jobs:
           python3 -m pip install --upgrade pip
           pip3 install requests beautifulsoup4 lxml
       - name: Run
-        run: python3 ./run.py --account ${{ secrets.COOKIE_NAME }} --password${{ secrets.COOKIE_VALUE }}
+        run: python3 ./run.py --account ${{ secrets.COOKIE_NAME }} --password ${{ secrets.COOKIE_VALUE }}
     # .
       - name: Run
         run: python3 ./script.py
